# codex_android

./: ANDROID_BUILD.md  ANDROID_BUILD_RUN_GUIDE.md  DEPLOY_SPEC.md  Makefile  README.md  android_deploy_debug.py  android_setup.sh  android_source  build-android.sh  build-termux-package.sh  install_termux_package.py  sourceme  termux-setup.sh  termux_direct_install.py  termux_install.sh  test_android_pty.rs  test_pts.sh
backup_android_files/: android_deploy_simple.py  android_lldb_debug.py  sourceme
codex-rs/.cargo/: config.toml
codex-rs/chatgpt/: Cargo.toml
codex-rs/core/: Cargo.toml
codex-rs/core/src/: android_pty.rs  config.rs  error.rs  lib.rs
codex-rs/core/src/exec_command/: android_exec_command_session.rs  android_session_manager.rs  mod.rs
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/linux-sandbox/src/: lib.rs
codex-rs/login/: Cargo.toml
codex-rs/ollama/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: clipboard_paste.rs
pts_test/: Makefile  README.md  pts_test.c
termux-package-build/DEBIAN/: control  postinst
termux-package-build/data/data/com.termux/files/usr/etc/codex/: config.toml.example
termux-package-build/data/data/com.termux/files/usr/share/codex/docs/: README.md
termux-package-build/data/data/com.termux/files/usr/share/codex/examples/: basic_usage.md
test_android_minimal/: Cargo.toml
test_android_minimal/.cargo/: config.toml
test_android_minimal/src/: main.rs
test_pty/: Cargo.toml
test_pty/src/: main.rs
